# swe

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  Midterm T3 2021.ipynb  Numerical Method Final T1 2021.ipynb  Numerical_Method_Final_T2_2021.ipynb  README.md  coverage.xml  docker-compose.yml  exercise1.py  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini
.github/workflows/: python-tests.yml
homework1/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
homework1/backend/: Dockerfile  app.py  app_controller.py  app_init.py  app_svc.py  placeholder.py  vending.py
homework1/backend/database/: database.py  stock.py  vending_machine.py
homework1/backend/route/: stock_route.py  vm_route.py
homework1/backend/services/: stock_services.py  test_services.py  test_vm_services.py  vending_machine_services.py
homework1/backend/templates/: base.html  machines.html  stock.html
homework1/backend/test/route_stock/: test_delete_product.py  test_update_product.py
homework1/backend/test/route_vending_machine/: test_add_machine.py  test_delete_machine.py  test_update_machine.py  test_update_mahcine.py
src/: Dockerfile  app.py  app_init.py  docker-compose.yml
src/backend/: Dockerfile  requirements.txt
src/backend/database/: stock.py
src/backend/services/: stock_test_services.py  test_stock_services.py  vm_test_services.py
src/database/: model.py  stock.py  vending_machine.py
src/route/: stock_route.py  stock_timeline.py  vm_route.py
src/services/: stock_services.py  stock_test_services.py  vending_machine_services.py
src/templates/: base.html  machines.html  stock.html
src/vending_machine/: Dockerfile  app.py  app_init.py
test/: .coverage  coverage.xml  test_machine.py  test_stock.py  test_timeline.py
test/route_stock/: coverage.xml  test_stock.py
test/route_vending_machine/: test_machine.py
(+60 files in other folders)
