[tool.poetry]
name = "swe"
version = "0.1.0"
description = ""
authors = ["stellardropthebeat <nutchapol.isa@student.mahidol.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
flake8 = "^5.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ipykernel = "^6.15.1"
flake8-annotations = "^2.9.1"
flake8-eradicate = "^1.4.0"
flask = "^2.2.2"
requests = "^2.28.2"
pytest-env = "^0.8.1"
waitress = "^2.0.0"
sqlalchemy_utils = "^0.37.9"
flask_sqlalchemy = "^2.5.1"
pymysql = "^1.0.2"
sqlalchemy = "^1.4.27"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
