[tool.poetry]
name = "vending-machine"
version = "0.1.0"
description = "Application for Vending_machine"
authors = ["Nutchapol Isariyapruit 6281454"]
readme = "README.md"
packages = [{include = "vending_machine"}]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
flake8 = "^5.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ipykernel = "^6.15.1"
flake8-annotations = "^2.9.1"
flake8-eradicate = "^1.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
